# multiline-str-rust-macro

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: lib.rs
